--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,25 +54,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_gradient_screen"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:background="@color/white"
             android:orientation="vertical"
-            android:padding="@dimen/_20sdp">
+            android:paddingStart="@dimen/_20sdp"
+            android:paddingEnd="@dimen/_20sdp"
+            android:paddingTop="@dimen/_30sdp"
+            android:paddingBottom="@dimen/_30sdp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:fontFamily="@font/ptsans_bold"
                 android:text="No Recommendations!"
@@ -82,27 +83,27 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:background="@drawable/border_corner_drawable"
                 android:fontFamily="@font/ptsans_regular"
-                android:justificationMode="inter_word"
+                android:padding="@dimen/_20sdp"
                 android:text="@string/no_recommendations_disclaimer"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="@dimen/_16ssp" />
 
             <TextView
                 android:id="@+id/open_preference_settings_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/rounded_button_solid"
                 android:fontFamily="@font/darkergrotesque_bold"
-                android:textAlignment="center"
+                android:gravity="center"
+                android:paddingTop="@dimen/_10sdp"
                 android:text="Open Preference Settings"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_16ssp"
-                android:padding="@dimen/_10sdp"
-                android:background="@drawable/border_rounded_corner"
+                android:textSize="@dimen/_18ssp"
                 android:clickable="true"
                 android:focusable="true"/>
 
