--- a/app/src/main/res/layout/liked_profile_placeholder.xml
+++ b/app/src/main/res/layout/liked_profile_placeholder.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/_10sdp"
+    android:layout_margin="@dimen/_5sdp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,8 +13,8 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_10sdp"
             android:layout_weight="1"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:orientation="vertical">
 
             <ImageView
@@ -39,9 +39,9 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginStart="@dimen/_5sdp">
 
             <ImageView
                 android:layout_width="match_parent"
