--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".views.home.HomeFragment">
 
     <com.github.ybq.android.spinkit.SpinKitView
         android:id="@+id/progress_loading_recommendations"
+        style="@style/SpinKitView.Large.ThreeBounce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="@dimen/_10sdp"
         android:layout_centerInParent="true"
-        style="@style/SpinKitView.Large.Wave"
-        app:SpinKit_Color="@color/indicatioractive"/>
+        app:SpinKit_Color="@color/ted_image_picker_primary_pressed" />
 
     <RelativeLayout
         android:id="@+id/recommendations_available_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone">
+
         <TextView
             android:id="@+id/screentitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/_30sdp"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/ptsans_bold"
             android:paddingStart="@dimen/_20sdp"
+            android:paddingTop="@dimen/_30sdp"
             android:paddingEnd="@dimen/_20sdp"
             android:text="Find Your Match"
             android:textColor="@color/black"
@@ -54,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_gradient_screen"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,21 +68,23 @@
             android:background="@color/white"
             android:orientation="vertical"
             android:paddingStart="@dimen/_20sdp"
-            android:paddingEnd="@dimen/_20sdp"
             android:paddingTop="@dimen/_30sdp"
+            android:paddingEnd="@dimen/_20sdp"
             android:paddingBottom="@dimen/_30sdp">
 
             <TextView
+                android:id="@+id/text_title_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:fontFamily="@font/ptsans_bold"
-                android:text="No Recommendations!"
+                android:text="@string/no_recommendations"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_20ssp" />
 
             <TextView
+                android:id="@+id/text_body_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -98,14 +102,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/rounded_button_solid"
+                android:clickable="true"
+                android:focusable="true"
                 android:fontFamily="@font/darkergrotesque_bold"
                 android:gravity="center"
                 android:paddingTop="@dimen/_10sdp"
                 android:text="Open Preference Settings"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_18ssp"
-                android:clickable="true"
-                android:focusable="true"/>
+                android:textSize="@dimen/_18ssp" />
 
         </LinearLayout>
     </RelativeLayout>
