--- a/app/src/main/res/layout/fragment_matching_phase.xml
+++ b/app/src/main/res/layout/fragment_matching_phase.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:fontFamily="@font/ptsans_bold"
-            android:text="Currently we are in our dating phase."
+            android:text="@string/in_dating_phase"
             android:textColor="@color/black"
             android:textSize="@dimen/_20ssp" />
 
