--- a/app/src/main/res/layout/row_info_profile.xml
+++ b/app/src/main/res/layout/row_info_profile.xml
@@ -7,7 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image_view"
@@ -187,7 +188,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp">
 
