--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/_30sdp"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".views.home.SettingsFragment">
@@ -19,7 +18,7 @@
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:fontFamily="@font/ptsans_bold"
-        android:text="Settings &amp; Information"
+        android:text="Settings &amp; Info"
         android:textColor="@color/black"
         android:textSize="@dimen/_25ssp" />
 
@@ -34,6 +33,7 @@
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
         android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,25 +51,23 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/_16ssp" />
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/ptsans_bold"
                 android:text="Settings"
                 android:textAllCaps="true"
-                android:fontFamily="@font/ptsans_bold"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/_16ssp" />
 
             <RelativeLayout
                 android:id="@+id/button_account_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackground">
+                android:focusable="true">
 
                 <ImageView
                     android:id="@+id/image_bullet_1"
@@ -87,26 +85,26 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_1"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Account Settings"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_arrow_right" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <RelativeLayout
                 android:id="@+id/button_preference_settings"
@@ -129,26 +127,26 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_2"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Preference Settings"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_arrow_right" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <RelativeLayout
                 android:id="@+id/button_availability_settings"
@@ -171,45 +169,45 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_4"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Availability Setings"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_arrow_right" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:fontFamily="@font/ptsans_bold"
                 android:text="Information"
                 android:textAllCaps="true"
-                android:fontFamily="@font/ptsans_bold"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp"
-                android:layout_marginTop="@dimen/_25sdp"/>
+                android:textSize="@dimen/_16ssp" />
 
             <RelativeLayout
                 android:id="@+id/button_faq_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:background="?attr/selectableItemBackground">
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
 
                 <ImageView
                     android:id="@+id/image_bullet_3"
@@ -227,26 +225,26 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_3"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="FAQs"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_arrow_right" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <!-- Hel[p Center  -->
             <RelativeLayout
@@ -270,11 +268,11 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_5"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Safe Dating Tips"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -287,18 +285,18 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <!-- Terms of Use  -->
             <RelativeLayout
                 android:id="@+id/button_terms_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackground">
+                android:focusable="true">
 
                 <ImageView
                     android:id="@+id/image_bullet_6"
@@ -316,11 +314,11 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_6"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Terms Of Use"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -333,9 +331,9 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <!-- Privacy Policy  -->
             <RelativeLayout
@@ -359,11 +357,11 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_7"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Privacy Policy"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -376,18 +374,18 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
             <!-- Sign Out  -->
             <RelativeLayout
                 android:id="@+id/button_signout_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackground">
+                android:focusable="true">
 
                 <ImageView
                     android:id="@+id/image_bullet_8"
@@ -405,11 +403,11 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_8"
                     android:fontFamily="@font/ptsans_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
                     android:text="Sign out"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:paddingTop="@dimen/_5sdp"
-                    android:paddingBottom="@dimen/_5sdp"/>
+                    android:textSize="@dimen/_14ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -422,9 +420,9 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@color/divider" />
 
         </LinearLayout>
     </ScrollView>
