--- a/app/src/main/res/layout/deactivate_profile_dialog.xml
+++ b/app/src/main/res/layout/deactivate_profile_dialog.xml
@@ -3,47 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/custom_dialog_layout_design_user_input"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/_20sdp"
+    android:layout_marginEnd="@dimen/_20sdp"
     android:background="@color/white"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/_20sdp"
+    android:paddingTop="@dimen/_20sdp"
+    android:paddingEnd="@dimen/_20sdp"
     android:padding="16dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/ic_warning"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/_10sdp"/>
-        <TextView
-            android:id="@+id/dialogTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deactivate Your Account"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_20ssp"
-            android:fontFamily="@font/sf_pro_rounded_medium"
-            android:layout_gravity="center"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:background="@color/black" />
+    <TextView
+        android:id="@+id/dialogTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:drawableStart="@drawable/ic_alert"
+        android:drawablePadding="@dimen/_5sdp"
+        android:fontFamily="@font/ptsans_bold"
+        android:text="@string/deactivate_your_account"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_20ssp" />
 
     <TextView
-        android:id="@+id/userInputDialog"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:justificationMode="inter_word"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:text="Are you sure you want to deactivate your account? Deactivating your account will permanently delete your Oho! profile along with all your data. \n \nIf confirmed then tap the confirm button below."
+        android:layout_marginTop="@dimen/_15sdp"
+        android:fontFamily="@font/ptsans_regular"
+        android:text="@string/deactivate_account_disclaimer"
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
-        android:fontFamily="@font/sf_pro_rounded_regular" />
+        android:textSize="@dimen/_16ssp" />
+
 
 <!--    <View-->
 <!--        android:layout_width="match_parent"-->
