fix: change the UI of FAQ section to match the rest of the app

--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -7,335 +7,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:paddingTop="@dimen/_30sdp"
     android:orientation="vertical"
     tools:context=".views.settings.FAQActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/screentitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="FAQs"
-        android:fontFamily="@font/ptsans_bold"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_25ssp"
-        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_10sdp"
-        android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"/>
+        android:fontFamily="@font/ptsans_bold"
+        android:text="FAQs"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_25ssp" />
+
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
         android:background="#1A000000" />
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_faq"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="@dimen/_20sdp"
-            android:paddingEnd="@dimen/_20sdp">
-
-            <!-- what is oho? -->
-            <RelativeLayout
-                android:id="@+id/button_what"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:tag="collapsed"
-                android:layout_marginTop="@dimen/_15sdp">
-
-                <TextView
-                    android:id="@+id/text_what"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:fontFamily="@font/ptsans_regular"
-                    android:text="What is Oho!?"
-                    android:layout_marginEnd="@dimen/_30sdp"
-                    android:textColor="@color/indicatioractive"
-                    android:textSize="@dimen/_16ssp" />
-
-                <ImageView
-                    android:id="@+id/button_collapse_what"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible"/>
-
-                <ImageView
-                    android:id="@+id/button_expand_what"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_down"
-                    android:visibility="gone"/>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/text_what_expand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/what_is_oho"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/sf_pro_rounded_regular"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
-                android:layout_alignParentStart="true"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
-
-            <!-- how does it work? -->
-            <RelativeLayout
-                android:id="@+id/button_how"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:tag="collapsed">
-
-                <TextView
-                    android:id="@+id/text_how"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:fontFamily="@font/ptsans_regular"
-                    android:text="How does it work?"
-                    android:layout_marginEnd="@dimen/_30sdp"
-                    android:textColor="@color/indicatioractive"
-                    android:textSize="@dimen/_16ssp" />
-
-                <ImageView
-                    android:id="@+id/button_collapse_how"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible"/>
-
-                <ImageView
-                    android:id="@+id/button_expand_how"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_down"
-                    android:visibility="gone"/>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/text_how_expand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/how_does_it_work"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/ptsans_regular"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
-                android:layout_alignParentStart="true"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
-
-            <!-- what happens if i don't show up on my date? -->
-            <RelativeLayout
-                android:id="@+id/button_not_showup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:tag="collapsed">
-
-                <TextView
-                    android:id="@+id/text_not_showup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:fontFamily="@font/ptsans_regular"
-                    android:text="What happens if I don't show up on my date?"
-                    android:textColor="@color/indicatioractive"
-                    android:layout_marginEnd="@dimen/_30sdp"
-                    android:textSize="@dimen/_16ssp" />
-
-                <ImageView
-                    android:id="@+id/button_collapse_not_showup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_right"
-                    android:visibility="visible" />
-
-                <ImageView
-                    android:id="@+id/button_expand_not_showup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_down"
-                    android:visibility="gone"/>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/text_not_showup_expand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/if_i_dont_show_up"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/ptsans_regular"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
-                android:layout_alignParentStart="true"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
-
-            <!-- is Oho! safe -->
-            <RelativeLayout
-                android:id="@+id/button_safe"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:tag="collapsed">
-
-                <TextView
-                    android:id="@+id/text_safe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:fontFamily="@font/ptsans_regular"
-                    android:text="Is Oho! safe for me?"
-                    android:layout_marginEnd="@dimen/_30sdp"
-                    android:textColor="@color/indicatioractive"
-                    android:textSize="@dimen/_16ssp" />
-
-                <ImageView
-                    android:id="@+id/button_collapse_safe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible"/>
-
-                <ImageView
-                    android:id="@+id/button_expand_safe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_down"
-                    android:visibility="gone"/>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/text_safe_expand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/if_i_dont_show_up"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/ptsans_regular"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
-                android:layout_alignParentStart="true"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
-
-            <!-- what is our motivation -->
-            <RelativeLayout
-                android:id="@+id/button_motivation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:tag="collapsed">
-
-                <TextView
-                    android:id="@+id/text_motivation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginEnd="@dimen/_30sdp"
-                    android:fontFamily="@font/ptsans_regular"
-                    android:text="What is our motivation for this app?"
-                    android:textColor="@color/indicatioractive"
-                    android:textSize="@dimen/_16ssp" />
-
-                <ImageView
-                    android:id="@+id/button_collapse_motivation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible"/>
-
-                <ImageView
-                    android:id="@+id/button_expand_motivation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_down"
-                    android:visibility="gone"/>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/text_motivation_expand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/motivation"
-                android:justificationMode="inter_word"
-                android:fontFamily="@font/ptsans_regular"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
-                android:layout_alignParentStart="true"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/_10sdp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_20sdp"/>
 
 </LinearLayout>
