--- a/app/src/main/res/layout/row_quick_message.xml
+++ b/app/src/main/res/layout/row_quick_message.xml
@@ -4,14 +4,16 @@
     android:id="@+id/textview_quickmessage"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/quick_message_drawable"
+    android:background="@drawable/border_corner_drawable"
     android:text="Hey there!"
-    android:fontFamily="@font/darkergrotesque_bold"
-    android:textColor="#B42254"
+    android:fontFamily="@font/ptsans_regular"
+    android:textColor="@color/black"
     android:textSize="@dimen/_14ssp"
     android:layout_marginEnd="@dimen/_5sdp"
     android:layout_marginBottom="@dimen/_5sdp"
     android:layout_marginTop="@dimen/_5sdp"
-    android:paddingTop="@dimen/_5sdp"
-    android:paddingBottom="@dimen/_5sdp"/>
+    android:paddingTop="@dimen/_10sdp"
+    android:paddingBottom="@dimen/_10sdp"
+    android:paddingStart="@dimen/_15sdp"
+    android:paddingEnd="@dimen/_15sdp"/>
 
