--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -129,7 +129,9 @@
         android:layout_alignParentBottom="true"
         android:layout_toStartOf="@id/fab_send"
         android:background="@drawable/chat_message_input_drawable"
-        android:visibility="visible"/>
+        android:visibility="visible"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/fab_send"
